# spoify

./: .env  .gitignore  CHANGELOG.md  CURRENT_ISSUES.md  Cargo.toml  LICENSE  README.md  requirement.txt
configure/: creds.yml  default.yml  dracula.yml  kanagawa-dark.yml  kanagawa-light.yml  kanagawa.yml  keybindings.yml  settings.yml  theme.yml
src/: app.py  app.rs  enums.rs  key_event_handler.rs  main.rs  menu.py  spotify_to_yt_link.py  spotify_track_fetcher.py  structs.rs  tui.rs  ui.rs  util.rs  yt_download.py
src/handlers/: change_keybindings.rs  error_screen.rs  exit.rs  help.rs  key_event.rs  keybindings.rs  library.rs  mod.rs  new_release.rs  open_configure_folder.rs  player.rs  refresh.rs  search.rs  theme.rs  user_playlist.rs  util.rs
src/handlers/playlist_control/: add_track_to_playlist.rs  follow_playlist.rs  mod.rs  unfollow_playlist.rs
src/settings/: change_keybinding.rs  creds.rs  keybindings.rs  mod.rs  open_configure.rs  refresh.rs  settings.rs  theme.rs  volume.rs
src/spotify/: album_storage.rs  artist_storage.rs  auth.rs  devices.rs  fetch_playlist_tracks.rs  fetch_user_playlist.rs  liked_songs.rs  mod.rs  playlist_storage.rs  podcast.rs  query_find.rs  query_storage.rs  recently_played.rs  search.rs  track_storage.rs  user_albums.rs  user_artists.rs  user_playlist.rs  user_playlist_track.rs
src/spotify/library_section/: liked_songs.rs  made_fy.rs  made_fy_tracks.rs  mod.rs  podcast.rs  recently_played.rs  user_album_tracks.rs  user_albums.rs  user_artist_tracks.rs  user_artists.rs
src/spotify/lyrics/: lyric.rs  mod.rs
src/spotify/new_release_section/: mod.rs  new_releases.rs  new_releases_tracks.rs
src/spotify/player/: currently_playling.rs  devices.rs  mod.rs  next_track.rs  pause_playback.rs  play_playback.rs  player.rs  previous_track.rs  repeat.rs  shuffle.rs  start_playback.rs  util.rs  volume_decrease.rs  volume_increase.rs
src/spotify/playlist_control/: add_track_to_playlist.rs  mod.rs  playlist_follow.rs  playlist_unfollow.rs
src/templates/: index.html  result.html
src/ui/: blank_screen.rs  error_screen.rs  fullscreen_player.rs  help.rs  homepage.rs  library.rs  lyrics.rs  main_area.rs  mod.rs  new_release.rs  player.rs  search.rs  search_album.rs  search_artist.rs  tui.rs  ui.rs  user_playlist.rs  util.rs
(+18 files in other folders)
