[package]
name = "spoify-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
ratatui = "0.26.1"
reqwest = "0.12.2"
tokio = {version = "1.36.0", features = ["full"]}
rspotify = { version = "0.13.0", features = ["cli"] }
serde_json = "1.0.114"
serde = "1.0.197"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.37"
webbrowser = "0.8.13"
dotenvy = "0.15.7"
regex = "1.10.4"
url = "2.5.0"


