[package]
name = "spoify"
version = "0.2.8"
edition = "2021"
description = "a spotify client inside your terminal"
readme = "README.md"
repository = "https://github.com/slyeet03/spoify"
license = "MIT"
keywords = ["rust", "terminal", "spotify", "unix", "cli"]
categories = ["command-line-utilities"]
documentation = "https://github.com/slyeet03/spoify"

exclude = [".vscode/*", "spotify_cache/*", "target/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
reqwest = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
rspotify = { version = "0.13.0", features = ["cli"] }
serde_json = "1.0.114"
serde = "1.0.197"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.37"
webbrowser = "0.8.13"
regex = "1.10.4"
url = "2.5.0"
serde_yaml = "0.9.34"
indoc = "2.0.5"
itertools = "0.12.1"
yaml-rust = "0.4.5"
anyhow = "1.0.82"
rayon = "1.10.0"
